iptables.up.rules
# Generated by iptables-save v1.4.21 on Fri Oct 12 22:23:28 2018
*nat
:PREROUTING ACCEPT [1984736:104344918]
:POSTROUTING ACCEPT [547050:37721803]
:OUTPUT ACCEPT [547050:37721803]
COMMIT
# Completed on Fri Oct 12 22:23:28 2018
# Generated by iptables-save v1.4.21 on Fri Oct 12 22:23:28 2018
*mangle
:PREROUTING ACCEPT [51396197:33460583813]
:INPUT ACCEPT [51396197:33460583813]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [54149949:32814222352]
:POSTROUTING ACCEPT [54149949:32814222352]
COMMIT
# Completed on Fri Oct 12 22:23:28 2018
# Generated by iptables-save v1.4.21 on Fri Oct 12 22:23:28 2018
*raw
:PREROUTING ACCEPT [51396197:33460583813]
:OUTPUT ACCEPT [54149949:32814222352]
COMMIT
# Completed on Fri Oct 12 22:23:28 2018
# Generated by iptables-save v1.4.21 on Fri Oct 12 22:23:28 2018
*filter
:FORWARD ACCEPT [0:0]
:syn-flood - [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 80 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 21 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 20000:30000 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 443 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 3306 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 1868:1878 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 10000 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 8080 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 8443 --state NEW -j ACCEPT
-A INPUT -p icmp -m limit --limit 1/sec --limit-burst 10 -j ACCEPT
-A INPUT -m limit -f --limit 100/sec --limit-burst 100 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn-flood
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A syn-flood -p tcp -m limit --limit 3/sec --limit-burst 6 -j RETURN
-A syn-flood -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Oct 12 22:23:28 2018
